# rayz-target

./: CIRCUIT_SCHEME.md  CMakeLists.txt  README.md  platformio.ini  sdkconfig.defaults  sdkconfig.target
include/: config.h  display.hpp  i2c_scanner.hpp  photodiode.hpp  task_shared.h  tasks.h  utils.hpp
src/: CMakeLists.txt  README.md  config.cpp  config.h  display.cpp  i2c_scanner.cpp  idf_component.yml  main.cpp  photodiode.cpp  photodiode.hpp  task_shared.cpp  utils.cpp
src/tasks/: ble_task.cpp  espnow_task.cpp  game_task.cpp  photodiode_task.cpp  processing_task.cpp  ws_task.cpp
